--- a/homework06/dilaaaap-test-flask-deployment.yml
+++ b/homework06/dilaaaap-test-flask-deployment.yml
@@ -18,7 +18,7 @@ spec:
         app: dilaaaap-test-flask
     spec:
       containers:
-        - name: dilaaaaplask
+        - name: dilaaaapflask
           imagePullPolicy: Always
-          image: jstubbs/hello-flask
+          image: dilaaaap/hello-flask
 
